samples/_failures_safe/1761628248_a4c3f6_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_e1459112.c: In function ‘main’:
./samples/SAFE/__tmp_e1459112.c:178:53: error: ‘StateMachine’ has no member named ‘current’
  178 |         printf("\nCurrent state: %s", state_names[sm.current
      |                                                     ^
./samples/SAFE/__tmp_e1459112.c:178:61: error: expected ‘]’ at end of input
  178 |         printf("\nCurrent state: %s", state_names[sm.current
      |                                                             ^
      |                                                             ]
./samples/SAFE/__tmp_e1459112.c:178:9: error: expected declaration or statement at end of input
  178 |         printf("\nCurrent state: %s", state_names[sm.current
      |         ^~~~~~
./samples/SAFE/__tmp_e1459112.c:178:9: error: expected declaration or statement at end of input
